# project-eva

./: .env  .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
app/: main.py
app/api/: chat.py  memory.py  persona.py  voice.py
app/core/: embeddings.py  llm_client.py  memory_engine.py  persona_engine.py
app/models/: schemas.py
app/services/: chat_service.py  voice_service.py
app/static/: index.html
config/: default_persona.yaml  settings.py
data/: eva.db
personas/: gintoki.yaml  zhaolusi.yaml
personas/default/examples/: default.yaml  gossip.yaml  sharing_joy.yaml  tucao.yaml  venting.yaml
personas/gintoki/examples/: default.yaml  gossip.yaml  sharing_joy.yaml  tucao.yaml  venting.yaml
personas/zhaolusi/examples/: default.yaml  gossip.yaml  sharing_joy.yaml  tucao.yaml  venting.yaml
scripts/: inspect_db.py
