[project]
name = "project-eva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "edge-tts>=7.0.0",
    "fastembed>=0.6.0",
    "fastapi>=0.136.0",
    "faster-whisper>=1.2.1",
    "funasr>=1.3.1",
    "modelscope>=1.36.1",
    "openai>=2.32.0",
    "openai-whisper>=20240930",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "qwen-asr>=0.0.6",
    "uvicorn>=0.45.0",
]
